--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <p id="scss">SCSS: chưa chọn</p>
   <p id="js">JS: chưa chọn</p>
   <p id="out">Output: chưa chọn</p>
+  <p id="folder">Folder Watch: chưa chọn</p>
   <div class="display:flex gap:20px flex-direction:column">
     <div class="display:flex gap:10px">
       <button
@@ -44,6 +45,11 @@
         class="box-sizing:border-box text-transform:uppercase cursor:pointer border:0 border-radius:3px font-weight:bold background:#4096ff color:#fff height:35px padding:5px_20px display:flex justify-content:center align-items:center"
         onclick="pickOut()">
         Chọn Output
+      </button>
+         <button
+        class="box-sizing:border-box text-transform:uppercase cursor:pointer border:0 border-radius:3px font-weight:bold background:#4096ff color:#fff height:35px padding:5px_20px display:flex justify-content:center align-items:center"
+        onclick="pickFolder()">
+        Watch Folder
       </button>
     </div>
 
